--- a/index.html
+++ b/index.html
@@ -53,8 +53,26 @@
 
     <h1> IL tuo biglietto</h1>
 
-    <div class="ticket">
+    <div class="ticket-container">
         
+        <h2> Dettaglio passeggeri</h2>
+
+        <div class="ticket">
+            <div class="name">
+                <h2>Nome passeggero</h2>
+                <h3 id=""></h3>
+            </div>
+
+            <div class="details">
+                <h4>Offerta</h4>
+
+                <h4>Carrozza</h4>
+                
+                <h4>Codice CP</h4>
+
+                <h4>Costo biglietto</h4>
+            </div>
+        </div>
     </div>
 
 
