--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="submission">
             <div class="bottoni">
                 <button id="generaBiglietto">Genera</button>
-                <button id="">Annulla</button>
+                <button id="Annulla">Annulla</button>
             </div>
         </div>
     </div>
@@ -68,13 +68,13 @@
                 <p id="ticket-type"></p>
 
                 <h4>Carrozza</h4>
-                <p class="carrozza"></p>
+                <p id="carrozza"></p>
                 
                 <h4>Codice CP</h4>
-                <p class="CP-code"></p>
+                <p id="CP-code"></p>
 
                 <h4>Costo biglietto</h4>
-                <p class="price"></p>
+                <p id="price"></p>
             </div>
         </div>
     </div>
